chromecast back button spacing fixed. closes #1269

--- a/less/app.less
+++ b/less/app.less
@@ -490,7 +490,7 @@ svg {
 	.controls ul li,
 	.feedback p,
 	.feedback ul.social li {
-		font-size: 12px;
+		font-size: 11px;
 		.unselectable;
 
 		@media screen and (min-width: @screen-sm){
@@ -506,8 +506,7 @@ svg {
 
 			li {
 				line-height: 44px;
-				margin-bottom: 2px;
-				padding: 0 11px 0 0;
+				margin-bottom: 1px;
 				
 				&.nav { padding-right: 0; }
 				
@@ -519,7 +518,6 @@ svg {
 						display: table-cell;
 						width: 50%;
 
-						&.nav-btn-left { border-right: 1px solid #000; }
 						&.nav-btn-right {
 							text-align: right;
 							border-left: 1px solid #000;
@@ -533,7 +531,7 @@ svg {
 					}
 				}
 				
-				i { width: 44px; }
+				i { width: 33px; }
 				
 				img {
 					height: 18px;
@@ -551,7 +549,7 @@ svg {
 		
 		ul.social {
 			li { line-height: 44px; }
-			i { width: 44px; }
+			i { width: 33px; }
 		}
 	}
 
